gcc/testsuite/rust/rustc/ui/parser/issues/issue-108242-semicolon-recovery.rs
fn foo() {}
fn main() {
    foo(;
    foo(;
} // { dg-error "" "" { target *-*-* } }

